--- a/src/services/service1/BUILD.bazel
+++ b/src/services/service1/BUILD.bazel
@@ -1,4 +1,9 @@
 load("@io_bazel_rules_go//go:def.bzl", "go_binary")
+load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier")
+
+buildifier(
+    name = "buildifier",
+)
 
 go_binary(
     name = "service1",
